--- a/package.json
+++ b/package.json
@@ -137,7 +137,7 @@
     "jsdom": "^16.5.3",
     "lint-staged": "8.2.0",
     "mocha": "6.1.4",
-    "mountebank": "2.0.0",
+    "mountebank": "^2.4.0",
     "nock": "13.0.11",
     "node-sass": "5.0.0",
     "nodemon": "1.19.1",
