--- a/.github/workflows/npm-audit.yml
+++ b/.github/workflows/npm-audit.yml
@@ -59,7 +59,7 @@ jobs:
           curl \
             -X POST \
             -H "Accept: application/vnd.github.v3+json" \
-            -H "authorization: Bearer ${{ secrets.MY_SECRET_TOKEN }}" \
+            -H "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/${{ github.repository }}/git/refs \
             -d ${postDataJson} \
             --fail
@@ -72,7 +72,7 @@ jobs:
           curl \
             -X POST \
             -H "Accept: application/vnd.github.v3+json" \
-            -H "authorization: Bearer ${{ secrets.MY_SECRET_TOKEN }}" \
+            -H "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/${{ github.repository }}/pulls \
             -d ${postDataJson} \
             --fail
