--- a/.github/workflows/npm-audit.yml
+++ b/.github/workflows/npm-audit.yml
@@ -4,8 +4,7 @@ on:
   push:
     branches:
       - master
-  schedule:
-    - cron: "1 6 * * 1"
+  pull_request:
 
 permissions:
   contents: write
@@ -76,3 +75,4 @@ jobs:
             https://api.github.com/repos/${{ github.repository }}/pulls \
             -d ${postDataJson} \
             --fail
+
